# mlfont

./: .gitignore  README.md  TRAINING.md  ml8x16-20260107.bdf  ml8x16-20260107.txt  ml8x16-20260111.bdf  ml8x16-20260111.txt  pyproject.toml
data/local/: shnm6x12u.bdf  shnm7x14u.bdf  shnm8x16u.bdf  shnm9x18u.bdf
mlfont/: bdffont.py  cli.py  datasets.py  fontmask.py
